[package]
name = "my-bunker-3"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
argon2 = "0.5.3"
chrono = "0.4.41"
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
mongodb = { version = "3.2.4", features = ["sync"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
tera = "1.20.0"
